# Rust-JS-Go-Microservice

./: .dockerignore  Cargo.toml  README.md  database.sql  docker-compose.yml  jeison.js  package-lock.json  package.json  server.js
backend/: Dockerfile  app.js  db.js  package-lock.json
backend/controllers/: loginController.js  productController.js
backend/middleware/: authMiddleware.js
backend/models/: orderModel.js  productModels.js
backend/routes/: productRoutes.js
backend/views/: edit.pug  index.pug  login.pug
frontend/: Dockerfile  go.mod  main.go
frontend/controllers/: productController.go
frontend/database/: db.go
frontend/middlewares/: logger.go
frontend/models/: order.go  product.go
frontend/routes/: routes.go
frontend/views/: index.html
frontend/views/templates/: index.html  product.html  products.html  success.html
gateway/src/: main.rs  state.rs
gateway/src/models/: auth.rs
src/: main.rs
src/handlers/: proxy.rs
src/models/: auth.rs
