[package]
name = "Triservice"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.0", features = ["full"] }
axum-reverse-proxy = "1.0"
jsonwebtoken = "10.3.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.13.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
